assets/css/admin.css
/* ... */
.incassoos-item-list .open-details.opened,
.incassoos-item-list .open-details.opened + .item-details,
.incassoos-item-list .sublist > li > ul > li:hover {
	background: #fbfbfb;
}

.incassoos-item-list > ul > li:last-of-type {
	padding-bottom: 12px;
}

.incassoos-item-list > ul > li:not(.selector),
.incassoos-item-list ul .group {
	padding-top: 5px;
	padding-bottom: 10px;
}

.incassoos-item-list li > input {
	margin-top: 0px;
}

.incassoos-item-list .sublist-header {
	display: inline-block;
	margin: 0px;
	width: 100%;
	padding: 0px 12px 6px;
	vertical-align: middle;
	font-weight: normal;
	font-style: italic;
	box-sizing: border-box;
}

.incassoos-item-list label {
	display: inline-block;
	/*width: 100%;*/
}

.incassoos-post-edit .incassoos-item-list li input + label {
	width: calc( 100% - 24px );
}

.incassoos-post-edit .incassoos-item-list .products .order-product input + label {
	width: calc( 100% - 76px );
	padding-top: 4px;
	padding-bottom: 5px;
}

.incassoos-post-edit .incassoos-item-list .products .order-product.is-selected input + label {
	font-weight: bold;
}

.incassoos-item-list .item-date {
	display: block;
	color: #666;
}

.incassoos-item-list .details {
	display: block;
}

.incassoos-item-list .details [class$="count"],
.incassoos-item-list .details [class$="total"] {
	font-weight: 600;
	opacity: .7;
}

.incassoos-item-list .details [class$="total"]:before {
	content: '/';
	margin-right: 4px;
}

.incassoos-item-list .details .view-action {
	display: none;
}

.incassoos-item-list .details .view-action:before {
	content: '|';
	color: #ddd;
	margin: 0 4px;
}

.incassoos-item-list label:hover .details .view-action {
	display: inline-block;
}

.incassoos-item-list .activity-participant,
.incassoos-item-list .occasion-product {
	display: flex;
}

.incassoos-item-list .assets .asset .title,
.incassoos-item-list .users .consumer .title,
.incassoos-item-list .products .product .label {
	display: inline-block;
	font-weight: 600;
	vertical-align: middle;
	flex: 1;
	padding-right: 12px;
	text-overflow: ellipsis;
	overflow: hidden;
	white-space: pre;
}

.incassoos-item-list .collection-consumer,
.incassoos-item-list .collection-consumer-type,
.incassoos-item-list .occasion-consumer,
.incassoos-item-list .occasion-consumer-type,
body.incassoos-post-view .incassoos-item-list .collection-consumer,
body.incassoos-post-view .incassoos-item-list .collection-consumer-type,
body.incassoos-post-view .incassoos-item-list .occasion-consumer,
body.incassoos-post-view .incassoos-item-list .occasion-consumer-type {
	padding: 0px;
}

.incassoos-item-list .open-details,
.incassoos-item-list .item-content {
	display: flex;
	width: 100%;
	padding: 5px 12px 7px;
	color: inherit;
	line-height: 20px;
	text-decoration: none;
	box-sizing: border-box;
}

.incassoos-item-list .item-details {
	display: none;
	margin-top: 2px;
	padding: 6px 12px 12px;
	opacity: .6;
}

.incassoos-item-list .open-details.opened + .item-details {
	display: block;
}

body.incassoos-post-view .incassoos-item-list .item-details li,
.incassoos-post-edit .incassoos-item-list .item-details li {
	padding: 0px;
	display: flex;
}

.incassoos-item-list .item-details .title {
	width: calc( 100% - 50px );
	padding-right: 12px;
	white-space: nowrap;
	text-overflow: ellipsis;
	overflow: hidden;
}

.incassoos-item-list .item-list-header {
	display: flex;
	align-items: start;
	flex-wrap: wrap;
	padding: 6px 12px 5px;
	border-bottom: 1px solid #eee;
}

.incassoos-item-list .item-list-header .quick-select {
	margin-right: 8px;
}

.incassoos-item-list .item-list-header .list-search {
	height: 28px;
	padding: 4px 5px;
	line-height: 28px;
	vertical-align: middle;
	border: 0px;
}

.incassoos-item-list .item-list-header > label:first-child + .list-search {
	margin-left: -5px;
}

.incassoos-item-list .item-list-header #show-selected,
.incassoos-item-list .item-list-header #show-default-items {
	padding: 4px 0px;
}

.incassoos-item-list .item-list-header #reverse-group-order,
.incassoos-item-list .item-list-header #toggle-list-columns,
.incassoos-item-list .item-list-header #open-add-participant {
	padding: 3px 3px 3.5px;
	margin: 0px 0px 0px 2px;
	border: 1px solid transparent;
}

/* Any sibling following the main search box */
.incassoos-item-list .item-list-header > .list-search + * {
	margin-left: auto !important; /* auto applies float:right in flexbox */
}

.incassoos-item-list #show-selected:after,
.incassoos-item-list #show-default-items:after,
.incassoos-item-list #reverse-group-order:after,
.incassoos-item-list #toggle-list-columns:after,
.incassoos-item-list #open-add-participant:after,
.incassoos-item-list .activity-participant .toggle-custom-price:before {
	display: inline-block;
	font: normal 20px/1 dashicons;
	vertical-align: bottom;
	speak: none;
	-webkit-font-smoothing: antialiased;
	-moz-osx-font-smoothing: grayscale;
	text-decoration: none !important;
}

.incassoos-item-list #show-selected:after,
.incassoos-item-list #show-default-items:after {
	content: '\f530'; /* dashicons-hidden */
	color: #ddd;
	margin: 0px 0px -2px 6px;
}

.incassoos-item-list.showing-selected #show-selected:after,
.incassoos-item-list.showing-default-items #show-default-items:after {
	content: '\f177'; /* dashicons-visibility */
	color: inherit;
}

.incassoos-item-list #reverse-group-order:after {
	content: '\f113'; /* dashicons-update-alt */
	transform: rotateZ(90deg);
	color: inherit;
}

.incassoos-item-list #toggle-list-columns:after {
	content: '\f228'; /* dashicons-menu-alt */
	color: inherit;
}

.incassoos-item-list #open-add-participant:after {
	content: '\f543'; /* dashicons-plus-alt2 */
	color: inherit;
}

.incassoos-item-list .adding-participant #open-add-participant:after {
	content: '\f460'; /* dashicons-minus */
	color: inherit;
}

.incassoos-item-list.no-list-columns #toggle-list-columns:after {
	transform: rotateZ(90deg);
}

.incassoos-item-list .add-participant-container.adding-participant {
	position: relative;
	width: 30px;
	height: 28px;
}
/* ... */

